@@ -15,6 +15,7 @@
 - Options to modify the special corruption rules for capital cities
   - allow_corruption_in_capital removes the rule fixing corruption at zero
   - special_capital_decorruption_effect sets the building-like decorruption bonus
+- For config file loading, use the text encoding that the game retrieves and records internally instead of assuming Windows-1252
 - aggressively_penalize_bankruptcy now alternates between selling buildings or disbanding units first for bankrupt AI players and every third turn cuts their research spending
 - Fix crash caused by failure to find default option for popup asking player to select new build in city that completed its previous one
 - Except nuclear weapons from disallow_useless_bombard_vs_airfields
